adjust some scales

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         #chart-container {
             /* position: relative; */
             /* height: auto; */
-            width: 40em;
+            width: vmax;
         }
 
         #footer {
@@ -145,7 +145,7 @@
                     title: {
                         display: true,
                         text: 'Proportion of Successes in Bernoulli Trials',
-                        fontSize: 20
+                        fontSize: 24
                     },
                     elements: {
                         point: {
@@ -161,7 +161,7 @@
                             scaleLabel: {
                                 display: true,
                                 labelString: 'Number of Coin Tosses',
-                                fontSize: 16
+                                fontSize: 18
                             },
                             ticks: {
                                 beginAtZero: true
@@ -171,7 +171,7 @@
                             scaleLabel: {
                                 display: true,
                                 labelString: 'Proportion of Heads',
-                                fontSize: 16
+                                fontSize: 18
                             },
                             ticks: {
                                 beginAtZero: true
