add link to repository

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         </script>
         <div id="footer">
             <p>It was created by <a href="https://www.chartjs.org/" target="_blank"><Strong>Chart.js</Strong></a> and <a href="https://www.mathjax.org/"target="_blank"><strong>MathJax</strong></a></p>
+            <p>Go to <a href="https://github.com/Phonedolly/toss-a-coin-js"><strong>Original Repository</strong></a></p>
             <p>Copyright 2020(c) Phonedolly</p>
         </div>
     </div>
